2018-07-31         Ralph Corderoy        <ralph@inputplus.co.uk>

	* gawk.1: Avoid hyphenation in gawk email address.

2018-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Two-way I/O): Add a nice example on buffering
	and ptys from Andrew Schorr.

2018-07-10         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Control Letters): Add a note about output of NaN and
	INF values with an xref to POSIX Floating Point Problems.
	(POSIX Floating Point Problems): Describe that gawk also outputs the
	four special strings for NaN and INF values.

2018-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Updated.

2018-06-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Records, gawk split records): More explanation
	of how RS works when it's longer than one character. Thanks
	to Andrew Schorr for most of the wording.
	* wordlist: Updated.

2018-06-11         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (awk split records): Document that even if the
	single character in RS is a regexp metacharacter, it's
	treated literally. Per suggestion from Ed Morton.

2018-06-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Extract Program): Remove an obsolete sentence.
	Thanks to Andrew Giovanni Colombo for pointing it out.

2018-05-31         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (String Functions): Clean up and clarify the
	prose description of gensub(). Thanks to Andrew Schorr
	for the encouragement (back in 2016...).

2018-05-31         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Extract Program): Additional bug fixes. Close
	the last file processed, and use the index of the for loop
	which is the filename as the argument to close()!

2018-05-28         Bjarni Ingi Gislason  <bjarniig@rhi.hi.is>

	* gawk.1: Change two-fonts macros to one-font macros for a
	single argument.

2018-05-27         Arnold D. Robbins     <arnold@skeeve.com>
