@@ -23480,7 +23480,7 @@ and infinity values.  The solution implemented in 'gawk' is as follows:
      'gawk' ignores case in the four special values.  Thus, '+nan' and
      '+NaN' are the same.
 
-   Besides handling imput, 'gawk' also needs to print "correct" values
+   Besides handling input, 'gawk' also needs to print "correct" values
 on output when a value is either NaN or infinity.  Starting with version
 4.2.2, for such values 'gawk' prints one of the four strings just
 described: '+inf', '-inf', '+nan', or '-nan'.  Similarly, in POSIX mode,
