@@ -28,10 +28,10 @@
 @c applies to and all the info about who's publishing this edition
 
 @c These apply across the board.
-@set UPDATE-MONTH November, 2017
+@set UPDATE-MONTH July, 2018
 
 @set TITLE Participating in @command{gawk} Development
-@set EDITION 0.7
+@set EDITION 0.71
 
 @iftex
 @set DOCUMENT booklet
@@ -903,8 +903,8 @@ the @command{gawk} maintainer recommends that you use are:
 @cindex configuration setting, @code{push.default}
 @cindex configuration setting, @code{pager.status}
 @example
-$ @kbd{git config --global push.default=simple}    @ii{Only push current branch}
-$ @kbd{git config --global pager.status=true}      @ii{Use pager for output of} git status
+$ @kbd{git config --global push.default simple}    @ii{Only push current branch}
+$ @kbd{git config --global pager.status true}      @ii{Use pager for output of} git status
 @end example
 
 @cindex @file{.gitconfig} file
