@@ -1,3 +1,9 @@
+2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Two-way I/O): Fix some typos.
+	* gawkworkflow.texi (Configuring git): Correct some
+	command usages. Thanks to Antonio Columbo for the fix.
+
 2018-07-31         Ralph Corderoy        <ralph@inputplus.co.uk>
 
 	* gawk.1: Avoid hyphenation in gawk email address.
